--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
 .item {
     display: none;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    background-color: var(--background);
 }
 
 .item.active {
     display: block;
 }
+
